Fixed button not clickable on mobile

--- a/style.css
+++ b/style.css
@@ -32,6 +32,12 @@ body {
 .w-15 {
     width: 10%!important;
 }
+.z-1{
+    z-index: 1;
+}
+.z-2 > *{
+    z-index: 2;
+}
 footer a{
     color: #fff;
 }
